--- a/.gitmodules
+++ b/.gitmodules
@@ -8,5 +8,5 @@
 	branch = master
 [submodule "aseba"]
 	path = aseba
-	url = https://github.com/aseba-community/aseba.git
+	url = https://github.com/davidjsherman/aseba.git
 	branch = master
