add Scratch package

--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 	path = aseba
 	url = https://github.com/davidjsherman/aseba.git
 	branch = master
+[submodule "packager/osx"]
+	path = packager/osx
+	url = https://github.com/davidjsherman/inirobot-osx.git
