--- a/.gitmodules
+++ b/.gitmodules
@@ -1,16 +1,16 @@
 [submodule "dashel"]
 	path = dashel
 	url = https://github.com/davidjsherman/dashel.git
-	branch = master
+	branch = pollsocketstream
 [submodule "enki"]
 	path = enki
-	url = https://github.com/davidjsherman/enki.git
-	branch = old-api
+	url = https://github.com/enki-community/enki.git
+	branch = master
 [submodule "aseba"]
 	path = aseba
 	url = https://github.com/davidjsherman/aseba.git
-	branch = sensor-reporters
+	branch = alpha-classcod
 [submodule "packager/inirobot-osx"]
 	path = packager/inirobot-osx
 	url = https://github.com/davidjsherman/inirobot-osx.git
-	branch = sensor-reporters
+	branch = master
